public enum MoveResult {
    EnteredRoom,
    HitWall,
    DoorLocked
}
